Added champion.gg direct search link.

--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,11 @@
     text-decoration: none;
     font-size: 20px;
 }
+
+.championgg {
+    margin-top: 10px;
+}
+
+.champ-label {
+    font-size: 20px;
+}
